--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h3#header {
   color: #868e96;
 }
 
-div jumbotron {
+main div jumbotron {
   border-radius: 5px;
   background-color: #e9ecef;
   padding: 10px;
